[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/UI/Final UI/music on.png" type="Texture" id=1]
[ext_resource path="res://Assets/testsheet.sprites/ui_sheet.sprites/ui-new_g311.tres" type="Texture" id=2]
[ext_resource path="res://Assets/testsheet.sprites/ui_sheet.sprites/ui-new_g1391-2.tres" type="Texture" id=3]
[ext_resource path="res://Assets/testsheet.sprites/ui_sheet.sprites/ui-new_g1488-4.tres" type="Texture" id=4]
[ext_resource path="res://Assets/testsheet.sprites/ui_sheet.sprites/ui-new_g291.tres" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Final UI/sounds off.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Final UI/sounds on.png" type="Texture" id=7]
[ext_resource path="res://Assets/testsheet.sprites/ui_sheet.sprites/ui-new_g310.tres" type="Texture" id=8]
[ext_resource path="res://Assets/UI/Final UI/music off.png" type="Texture" id=9]
[ext_resource path="res://Scripts/pause_overlay.gd" type="Script" id=10]

[node name="pause_overlay" type="CanvasLayer"]
script = ExtResource( 10 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0

[node name="PauseMenu" type="TextureRect" parent="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -303.0
margin_top = -271.0
margin_right = 303.0
margin_bottom = 271.0
rect_min_size = Vector2( 606, 542 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.5
margin_top = -130.5
margin_right = 237.5
margin_bottom = 130.5
custom_constants/separation = 50
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PauseMenu/VBoxContainer"]
margin_right = 475.0
margin_bottom = 63.0
custom_constants/separation = 60
alignment = 1

[node name="Music" type="TextureButton" parent="Control/PauseMenu/VBoxContainer/HBoxContainer"]
margin_left = 131.0
margin_right = 207.0
margin_bottom = 63.0
rect_min_size = Vector2( 76, 63 )
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Sound" type="TextureButton" parent="Control/PauseMenu/VBoxContainer/HBoxContainer"]
margin_left = 267.0
margin_right = 343.0
margin_bottom = 63.0
rect_min_size = Vector2( 76, 63 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/PauseMenu/VBoxContainer"]
margin_top = 113.0
margin_right = 475.0
margin_bottom = 261.0
custom_constants/separation = 16
alignment = 1

[node name="Resume" type="TextureButton" parent="Control/PauseMenu/VBoxContainer/HBoxContainer2"]
margin_right = 147.0
margin_bottom = 148.0
texture_normal = ExtResource( 5 )
stretch_mode = 5

[node name="Retry" type="TextureButton" parent="Control/PauseMenu/VBoxContainer/HBoxContainer2"]
margin_left = 163.0
margin_right = 310.0
margin_bottom = 148.0
texture_normal = ExtResource( 2 )
stretch_mode = 5

[node name="Home" type="TextureButton" parent="Control/PauseMenu/VBoxContainer/HBoxContainer2"]
margin_left = 326.0
margin_right = 475.0
margin_bottom = 148.0
texture_normal = ExtResource( 4 )
stretch_mode = 5

[node name="PauseMenu2" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -218.0
margin_top = -178.0
margin_right = 202.0
margin_bottom = -29.0
rect_min_size = Vector2( 420, 149 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="Control/PauseMenu/VBoxContainer/HBoxContainer2/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Control/PauseMenu/VBoxContainer/HBoxContainer2/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Control/PauseMenu/VBoxContainer/HBoxContainer2/Home" to="." method="_on_Home_pressed"]
